--- a/helloworld.html
+++ b/helloworld.html
@@ -1,10 +1,6 @@
 <html>
 <head>
-<<<<<<< HEAD
-<title> sanjay
-=======
-<title> welcome sanjay
->>>>>>> title2
+<title>welcome
 </title>
 </head>
 <body>
