--- a/helloworld.html
+++ b/helloworld.html
@@ -1,12 +1,7 @@
 <html>
 <head>
-<<<<<<< HEAD
-<title>sdhjfn</title>
-
-=======
-<title>iuhidfuhwu
+<title>weklcome
 </title>
->>>>>>> title2
 </head>
 <body>
 <p> my name is sanjay</p>
